--- a/lucky/templates/hello.html
+++ b/lucky/templates/hello.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<title>328 888</title>
+<title>平常心</title>
 {% if name %}
-  <h1>LUCKY {{ name }}!</h1>
+  <h1>平常心 {{ name }}!</h1>
 {% else %}
-  <h1>Hello, World!</h1>
+  <h1>平常心!</h1>
 {% endif %}
