--- a/lucky/templates/hello.html
+++ b/lucky/templates/hello.html
@@ -2,6 +2,7 @@
 <title>平常心</title>
 {% if name %}
   <h1>平常心 {{ name }}!</h1>
+  <img src='/static/ningjing.jpg'/>
 {% else %}
   <h1>平常心!</h1>
 {% endif %}
