--- a/lucky/templates/hello.html
+++ b/lucky/templates/hello.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<title>平常心</title>
+<title>感受宁静</title>
 {% if name %}
-  <h1>平常心 {{ name }}!</h1>
+  <h1>感受宁静 {{ name }}!</h1>
   <img src='/static/ningjing.jpg'/>
 {% else %}
   <h1>平常心!</h1>
