FIX，复制完移除临时input

--- a/lucky/templates/more.html
+++ b/lucky/templates/more.html
@@ -13,6 +13,7 @@
     } catch (eo) {
       var flag = false;
     }
+    document.body.removeChild(textarea);
     if (flag) {
       alert("幸运号码已复制");
     } else {
