--- a/lucky_flask/templates/camera.html
+++ b/lucky_flask/templates/camera.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>tracking.js - face with camera</title>
+  <title>Lucky >_< </title>
 
   <script src="/static/libs/tracking/tracking-min.js"></script>
   <script src="/static/libs/tracking/data/face-min.js"></script>
